Correct drop-down visibility on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ html, body {
         display: none !important;
     }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1201px) {
     html.has-video .playback-menu,
     html.has-video .zoom-menu,
     html.has-video .sync-menu
@@ -81,7 +81,7 @@ html, body {
         display: none !important;
     }
 }
-@media (min-width: 800px) {
+@media (min-width: 801px) {
     html:not(.has-video) .playback-menu,
     html:not(.has-video) .zoom-menu,
     html:not(.has-video) .sync-menu
